package model.entity;

import java.awt.image.BufferedImage;

public class Entity {

    public int worldX, worldY;
    public int speed;

    public String direction;

    public BufferedImage warrior;

}
