package view.renderer.entity;

import model.entity.Player;
import view.SpriteLoader;
import view.Animation.Animation;
import view.Animation.AnimationManager;

import java.awt.*;
import java.awt.image.BufferedImage;

import static main.GameSetting.*;



/**
 * The PLAYERRENDER CLASS is responsible for rendering the player entity onto the game screen.
 */
//-------------------------------------------------------------------------------------------------------------------
public class PlayerRender {

    private final int spriteWidth = SPRITE_FRAME_WIDTH;
    private final int spriteHeight = SPRITE_FRAME_HEIGHT;
    private AnimationManager animationManager;



    // COSTRUCTOR
    //-------------------------------------------------------------
    public PlayerRender() {
        loadAnimations();
    }
    //-------------------------------------------------------------

    //-------------------------------------------------------------
    private void loadAnimations() {

        //TODO: make the loading form diffferent source

        BufferedImage sheetImage = SpriteLoader.loadSpriteSheet("/res/player/Warrior_blue.png");

        BufferedImage[] idleFrames = SpriteLoader.getAnimationFrames(sheetImage, 0, 1, 6, spriteWidth, spriteHeight);
        BufferedImage[] walkFrames = SpriteLoader.getAnimationFrames(sheetImage, 1, 1, 6, spriteWidth, spriteHeight);
        BufferedImage[] attackRightFrames = SpriteLoader.getAnimationFrames(sheetImage, 2, 2, 6, spriteWidth, spriteHeight);
        BufferedImage[] attackDownFrames = SpriteLoader.getAnimationFrames(sheetImage, 4, 2, 6, spriteWidth, spriteHeight);
        BufferedImage[] attackUpFrames = SpriteLoader.getAnimationFrames(sheetImage, 6, 2, 6, spriteWidth, spriteHeight);

        animationManager = new AnimationManager();
        // frame duration in milliseconds
        animationManager.addAnimation("idle", new Animation(idleFrames, 120, true));
        animationManager.addAnimation("walk", new Animation(walkFrames, 90, true));
        animationManager.addAnimation("attack_right", new Animation(attackRightFrames, 60, false));
        animationManager.addAnimation("attack_down", new Animation(attackDownFrames, 60, false));
        animationManager.addAnimation("attack_up", new Animation(attackUpFrames, 60, false));
    }
    //-------------------------------------------------------------

    //-------------------------------------------------------------
    public void draw(Graphics2D g2, Player player) {
        BufferedImage frame = animationManager.getCurrent().getCurrentFrame();
        //System.out.println("X: "+ player.getWorldX()/TILE_SIZE + "Y: "+ player.getWorldY()/TILE_SIZE);

        if (player.getFacingRight() == -1) {
            // Flip the image horizontally for left direction
            g2.drawImage(frame,
                    player.getScreenX() + PLAYER_RENDER_WIDTH,
                    player.getScreenY(), -PLAYER_RENDER_WIDTH,
                    PLAYER_RENDER_HEIGHT,
                    null);
        } else {
            // Draw normally for right direction
            g2.drawImage(frame,
                    player.getScreenX(),
                    player.getScreenY(),
                    PLAYER_RENDER_WIDTH,
                    PLAYER_RENDER_HEIGHT,
                    null);
        }

    }
    //-------------------------------------------------------------

    //-------------------------------------------------------------
    public void updateAnimations(Player player, double deltaMs) {
        switch (player.getState()) {
            case IDLE:
                animationManager.playAnimation("idle");
                break;
            case WALKING:
                animationManager.playAnimation("walk");
                break;
            case ATTACKING:
                // Attack animation takes priority even while moving
                if (player.getDirection() == Direction.DOWN) {
                    animationManager.playAnimation("attack_down");
                } else if (player.getDirection() == Direction.UP) {
                    animationManager.playAnimation("attack_up");
                } else {
                    animationManager.playAnimation("attack_right");
                }

                // When attack animation finishes, release the attack state
                if (animationManager.getCurrent().isFinished()) {
                    player.stopAttack();
                }
                break;
        }
        animationManager.update(deltaMs);
    }
    //-------------------------------------------------------------


    //DEBUG METOD
    //-------------------------------------------------------------
    public void drawSolidArea(Graphics2D g2, Player player) {
        Rectangle solid = player.getSolidArea();
        int drawX = player.getScreenX() + solid.x;
        int drawY = player.getScreenY() + solid.y;

        // Semi-transparent red fill
        g2.setColor(new Color(255, 0, 0, 80));
        g2.fillRect(drawX, drawY, solid.width, solid.height);

        // Solid red border
        g2.setColor(Color.RED);
        g2.drawRect(drawX, drawY, solid.width, solid.height);
    }
    //-------------------------------------------------------------
}
//-------------------------------------------------------------------------------------------------------------------
